--- a/templates/bmc/css/pages/community.css
+++ b/templates/bmc/css/pages/community.css
@@ -30,7 +30,15 @@
 .contentpaneopen {
   display: grid;
   grid-template-columns: repeat(4, [col] 1fr);
-  /* grid-template-rows: repeat(9, [row] auto); */
+  grid-template-rows: repeat(9, [row] auto);
+}
+
+.contentpaneopen p:first-child {
+  margin: 0;
+}
+
+.contentpaneopen p:nth-child(2) {
+  margin: 0;
 }
 
 .link {
@@ -83,10 +91,11 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: 200px;
+  grid-auto-flow: dense;
   grid-gap: 5px;
 }
 
-.module-feature .big {
+.module-feature .big, .module-feature .flex {
   flex: 1 1 200px;
   height: 200px;
   grid-column: span 2;
@@ -130,7 +139,6 @@
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -170,7 +178,6 @@
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -210,7 +217,6 @@
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -229,6 +235,7 @@
   justify-content: center;
   text-align: center;
   padding: 2.5em;
+  margin-bottom: 5em;
 }
 
 .search-wrapper h4 {
@@ -248,6 +255,7 @@
   grid-column: col / span 4;
   grid-row: row 3;
   padding: 2.5em;
+  margin-bottom: 5em;
 }
 
 .explore .community-container {
@@ -315,7 +323,6 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 17rem;
-  grid-gap: 5px;
 }
 
 #one .module-fmn .regular {
@@ -349,7 +356,6 @@
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -369,6 +375,7 @@
   grid-row: row 5;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  margin: 4em 0;
 }
 
 #two .workshops {
@@ -418,7 +425,6 @@
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -437,6 +443,7 @@
   grid-row: row 6;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 4em;
 }
 
 #three .horizontal {
@@ -456,7 +463,7 @@
 #four {
   grid-column: col / span 4;
   grid-row: row 7;
-  background-color: #2E2D4D;
+  background-color: #222b37;
   color: #fff;
   text-align: center;
   padding: 2.5em;
@@ -472,6 +479,7 @@
   grid-row: row 8;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  margin: 4em 0;
 }
 
 #five .sites {
@@ -522,7 +530,6 @@
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -703,6 +710,12 @@
   }
 }
 
+@media only screen and (min-width: 625px) and (max-width: 829px) {
+  .feature .horizontal {
+    grid-column: span 3;
+  }
+}
+
 @media only screen and (min-width: 901px) and (max-width: 1200px) {
   #two {
     flex-wrap: wrap;
@@ -732,8 +745,30 @@
   }
 }
 
+@media only screen and (min-width: 1035px) and (max-width: 1239px) {
+  .feature .flex {
+    grid-column: span 3;
+    grid-row: span 1;
+  }
+}
+
+@media only screen and (min-width: 1240px) and (max-width: 1444px) {
+  .feature .big, .feature .module-feature .flex, .module-feature .feature .flex {
+    grid-row: span 1;
+  }
+}
+
+@media only screen and (min-width: 1445px) and (max-width: 1650px) {
+  .feature .flex {
+    grid-row: span 1;
+  }
+}
+
 @supports (display: grid) {
-  .feature .big {
+  .feature p {
+    margin: 1em 0;
+  }
+  .feature .big, .feature .module-feature .flex, .module-feature .feature .flex {
     width: auto;
     height: auto;
   }
@@ -749,8 +784,14 @@
     width: auto;
     height: auto;
   }
+  .explore p {
+    margin: 1em 0;
+  }
   .explore .community-container .communities {
     width: auto;
+  }
+  #one p {
+    margin: 1em 0;
   }
   #one .fmn {
     width: auto;
@@ -762,6 +803,9 @@
     width: auto;
     height: auto;
   }
+  #two p {
+    margin: 1em 0;
+  }
   #two .workshops {
     width: auto;
   }
@@ -769,11 +813,17 @@
     width: auto;
     height: auto;
   }
+  #three p {
+    margin: 1em 0;
+  }
   #three .horizontal {
     width: auto;
   }
   #three .classrooms {
     width: auto;
+  }
+  #five p {
+    margin: 1em 0;
   }
   #five .sites {
     width: auto;
@@ -781,6 +831,9 @@
   #five .module-sites .regular {
     width: auto;
     height: auto;
+  }
+  #c-six p {
+    margin: 1em 0;
   }
   #c-six .horizontal {
     width: auto;
