--- a/templates/bmc/css/pages/homepage.css
+++ b/templates/bmc/css/pages/homepage.css
@@ -1,79 +1,11 @@
-.resources .module-left .billboard .billboard-tag, .resources .module-left .resource .resource-tag, .resources .module-left .partner-tag, .resources .module-left .group .group-tag, .community .module-right .billboard .billboard-tag, .community .module-right .resource .resource-tag, .community .module-right .partner-tag, .community .module-right .group .group-tag {
-  position: absolute;
-  bottom: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 11px;
-  padding: 5px 10px;
-  background-color: #84bf41;
-}
-
-.resources .module-left .billboard .billboard-tag a, .resources .module-left .resource .resource-tag a, .resources .module-left .partner-tag a, .resources .module-left .group .group-tag a, .community .module-right .billboard .billboard-tag a, .community .module-right .resource .resource-tag a, .community .module-right .partner-tag a, .community .module-right .group .group-tag a {
-  color: #fff;
-}
-
-.resources .module-left .billboard-image::after, .resources .module-left .resource-img::after, .resources .module-left .partner-img::after, .resources .module-left .group .group-img::after, .community .module-right .billboard-image::after, .community .module-right .resource-img::after, .community .module-right .partner-img::after, .community .module-right .group .group-img::after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
-  height: 200px;
-  width: 100%;
-}
-
-.contentpane {
+.contentpaneopen {
   display: grid;
   grid-template-columns: repeat(4, [col] 1fr);
-  grid-template-rows: repeat(4, [row] auto);
-}
-
-.contentpaneopen {
-  grid-column: col / span 4;
-  grid-row: row / span 4;
+  grid-template-rows: repeat(4, [row] minmax(30rem, auto));
 }
 
 .green {
   color: #84bf41;
-}
-
-.green a {
-  padding: .25em .75em;
-  border: 1px solid #84bf41;
-}
-
-.green a:active {
-  color: #84bf41;
-}
-
-.green a:visited {
-  color: #84bf41;
-}
-
-.green a:hover {
-  color: #cca231;
-  border: 1px solid #cca231;
-}
-
-.white {
-  color: #fff;
-}
-
-.white a {
-  padding: .25em .75em;
-  border: 1px solid #fff;
-}
-
-.white a:active {
-  color: #fff;
-}
-
-.white a:visited {
-  color: #fff;
-}
-
-.white a:hover {
-  color: #cca231;
 }
 
 .link {
@@ -83,13 +15,22 @@
 .intro-container {
   grid-column: col / span 4;
   grid-row: row;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  background: url("/app/site/media/images/pexels-photo-355988.jpg");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 100%), url("/app/site/media/images/pexels-photo-355988.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   background-color: #000;
   color: #fff;
 }
 
 .intro {
+  grid-column: 1 / span 2;
   width: 40%;
-  padding: 30px;
+  align-self: center;
+  padding: 2.5em;
 }
 
 .intro .tagline {
@@ -101,7 +42,13 @@
   grid-row: row 2;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: repeat(2, minmax(23rem, auto));
+  background-color: #5f5980;
+  color: #fff;
+}
+
+.one h2, .one h3 {
+  color: #fff;
 }
 
 h3 {
@@ -120,6 +67,7 @@ h3 {
 .resources .oer {
   width: 50%;
   padding: 2.5em;
+  align-self: center;
 }
 
 .resources .module-left {
@@ -127,6 +75,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5px;
+  padding: 2.5em;
 }
 
 .resources .module-left .big {
@@ -159,8 +108,32 @@ h3 {
   object-fit: cover;
 }
 
+.resources .module-left .billboard-image::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
 .resources .module-left .billboard {
   position: relative;
+}
+
+.resources .module-left .billboard .billboard-tag {
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #84bf41;
+}
+
+.resources .module-left .billboard .billboard-tag a {
+  color: #fff;
 }
 
 .resources .module-left .billboard .billboard-header {
@@ -173,7 +146,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -197,12 +169,32 @@ h3 {
   object-fit: cover;
 }
 
+.resources .module-left .resource-img::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
 .resources .module-left .resource {
   position: relative;
 }
 
 .resources .module-left .resource .resource-tag {
-  background-color: #2E2D4D;
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #222b37;
+}
+
+.resources .module-left .resource .resource-tag a {
+  color: #fff;
 }
 
 .resources .module-left .resource .resource-title {
@@ -215,7 +207,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -241,6 +232,30 @@ h3 {
   transform: translateY(-50%);
 }
 
+.resources .module-left .partner-img::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
+.resources .module-left .partner-tag {
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #84bf41;
+}
+
+.resources .module-left .partner-tag a {
+  color: #fff;
+}
+
 .resources .module-left .partner-title {
   position: absolute;
   bottom: 0;
@@ -251,7 +266,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -281,6 +295,30 @@ h3 {
   transform: translateY(-50%);
 }
 
+.resources .module-left .group .group-img::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
+.resources .module-left .group .group-tag {
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #84bf41;
+}
+
+.resources .module-left .group .group-tag a {
+  color: #fff;
+}
+
 .resources .module-left .group .group-description {
   position: absolute;
   bottom: 0;
@@ -291,7 +329,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -322,6 +359,25 @@ h3 {
   padding-top: 2em;
 }
 
+.software .left .link a {
+  padding: .25em .75em;
+  border: 1px solid #fff;
+}
+
+.software .left .link a:active {
+  color: #fff;
+}
+
+.software .left .link a:visited {
+  color: #fff;
+}
+
+.software .left .link a:hover {
+  background-color: #222b37;
+  color: #fff;
+  border: none;
+}
+
 .software .software-logos {
   width: 50%;
   padding: 2.5em;
@@ -341,7 +397,7 @@ h3 {
   height: 50px;
   align-self: center;
   margin: 0;
-  color: #9B9B9B;
+  color: #F1F2F2;
 }
 
 .sub-title {
@@ -357,7 +413,7 @@ h3 {
   display: flex;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 300px;
+  grid-template-rows: 23rem;
 }
 
 .network .network-logos {
@@ -389,6 +445,25 @@ h3 {
   padding-top: 2em;
 }
 
+.network .link a {
+  padding: .25em .75em;
+  border: 1px solid #84bf41;
+}
+
+.network .link a:active {
+  color: #84bf41;
+}
+
+.network .link a:visited {
+  color: #84bf41;
+}
+
+.network .link a:hover {
+  background-color: #222b37;
+  color: #fff;
+  border: none;
+}
+
 .community {
   display: flex;
   display: grid;
@@ -412,6 +487,25 @@ h3 {
 
 .community .left .button {
   text-align: center;
+}
+
+.community .left .button a {
+  padding: .25em .75em;
+  border: 1px solid #84bf41;
+}
+
+.community .left .button a:active {
+  color: #84bf41;
+}
+
+.community .left .button a:visited {
+  color: #84bf41;
+}
+
+.community .left .button a:hover {
+  background-color: #222b37;
+  color: #fff;
+  border: none;
 }
 
 .community .left .button h6 {
@@ -458,8 +552,32 @@ h3 {
   object-fit: cover;
 }
 
+.community .module-right .billboard-image::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
 .community .module-right .billboard {
   position: relative;
+}
+
+.community .module-right .billboard .billboard-tag {
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #84bf41;
+}
+
+.community .module-right .billboard .billboard-tag a {
+  color: #fff;
 }
 
 .community .module-right .billboard .billboard-header {
@@ -472,7 +590,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -496,12 +613,33 @@ h3 {
   object-fit: cover;
 }
 
+.community .module-right .resource-img::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
 .community .module-right .resource {
   position: relative;
 }
 
 .community .module-right .resource .resource-tag {
-  background-color: #2E2D4D;
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #222b37;
+  background-color: #222b37;
+}
+
+.community .module-right .resource .resource-tag a {
+  color: #fff;
 }
 
 .community .module-right .resource .resource-title {
@@ -514,7 +652,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -540,6 +677,30 @@ h3 {
   transform: translateY(-50%);
 }
 
+.community .module-right .partner-img::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
+.community .module-right .partner-tag {
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #84bf41;
+}
+
+.community .module-right .partner-tag a {
+  color: #fff;
+}
+
 .community .module-right .partner-title {
   position: absolute;
   bottom: 0;
@@ -550,7 +711,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -580,6 +740,30 @@ h3 {
   transform: translateY(-50%);
 }
 
+.community .module-right .group .group-img::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to bottom, transparent 0%, transparent 50%, black 100%);
+  height: 200px;
+  width: 100%;
+}
+
+.community .module-right .group .group-tag {
+  position: absolute;
+  bottom: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px 10px;
+  background-color: #84bf41;
+}
+
+.community .module-right .group .group-tag a {
+  color: #fff;
+}
+
 .community .module-right .group .group-description {
   position: absolute;
   bottom: 0;
@@ -590,7 +774,6 @@ h3 {
   display: block;
   /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: 2em;
   /* Fallback for non-webkit */
   margin: 0 auto;
@@ -645,22 +828,47 @@ h3 {
   margin-bottom: 2.5em;
 }
 
+.three .service .link a {
+  padding: .25em .75em;
+  border: 1px solid #84bf41;
+}
+
+.three .service .link a:active {
+  color: #84bf41;
+}
+
+.three .service .link a:visited {
+  color: #84bf41;
+}
+
+.three .service .link a:hover {
+  background-color: #222b37;
+  color: #fff;
+  border: none;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 900px) {
+  .intro-container .intro {
+    grid-column: 1 / span 4;
+  }
   .resources {
     flex-wrap: wrap;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 20rem auto;
   }
-  .resources .big {
+  .resources .module-left {
     width: 100%;
-    height: 250px;
     grid-column: 1 / span 4;
-    grid-row: 1;
+    grid-row: 2;
+    grid-template-rows: repeat(3, 17rem);
+  }
+  .resources .module-left .regular {
+    grid-column: span 3;
   }
   .resources .oer {
     width: 100%;
     order: -1;
     grid-column: 1 / span 4;
-    grid-row: 2;
+    grid-row: 1;
   }
   .software {
     flex-wrap: wrap;
@@ -700,10 +908,12 @@ h3 {
     grid-column: 1 / span 4;
     grid-row: 1;
   }
-  .community .module-right {
+  .community .right {
     width: 100%;
     grid-column: 1 / span 4;
     grid-row: 2;
+  }
+  .community .module-right {
     grid-template-rows: repeat(4, 150px);
   }
   .community .module-right .big {
@@ -718,7 +928,7 @@ h3 {
   }
   .three {
     flex-wrap: wrap;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
   }
   .three .service {
     width: 100%;
@@ -727,6 +937,12 @@ h3 {
 }
 
 @media only screen and (min-width: 901px) and (max-width: 1200px) {
+  .resources .module-left {
+    grid-template-rows: repeat(3, 15rem);
+  }
+  .resources .module-left .regular {
+    grid-column: span 3;
+  }
   .community .module-right {
     grid-template-rows: repeat(4, 200px);
   }
@@ -746,6 +962,9 @@ h3 {
 }
 
 @supports (display: grid) {
+  .intro-container .intro {
+    width: auto;
+  }
   .resources .oer {
     width: auto;
   }
