--- a/templates/bmc/css/pages/homepage.scss
+++ b/templates/bmc/css/pages/homepage.scss
@@ -1,6 +1,7 @@
 //Color variables
 $green: #84bf41;
-$dark-blue: #2E2D4D;
+$dark-blue: #222b37;
+// $dark-blue: #2E2D4D;
 $teal: #007991;
 $pink: #cb48b7;
 $med-blue: #5f5980;
@@ -10,11 +11,28 @@ $orange: #cca231;
 $black: #000;
 $white: #fff;
 
+//Mixins
+@mixin buttons($color) {
+  a {
+    padding: .25em .75em;
+    border: 1px solid $color;
+    &:active {
+      color: $color;
+    }
+    &:visited {
+      color: $color;
+    }
+    &:hover {
+      background-color: $dark-blue;
+      color: $white;
+      border: none;
+    }
+  }
+}
 //Mixins for showcase module
 @mixin showcase-header($font-size, $line-height, $lines-to-show) {
   display: block; /* Fallback for non-webkit */
   display: -webkit-box;
-  max-width: 200px;
   height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
   margin: 0 auto;
   font-size: $font-size;
@@ -25,21 +43,19 @@ $white: #fff;
   text-overflow: ellipsis;
   color: $white;
 }
-
-//Extends for showcase module
-%showcase-tag {
+@mixin showcase-tag($background-color, $link-color) {
   position: absolute;
   bottom: 50px;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 11px;
   padding: 5px 10px;
-  background-color: $green;
+  background-color: $background-color;
   a {
-    color: $white;
+    color: $link-color;
   }
 }
-%image-gradient {
+@mixin image-gradient {
   content: '';
   display: block;
   position: absolute;
@@ -62,47 +78,18 @@ $white: #fff;
 //   grid-template-rows: repeat(4, [row] auto);
 // }
 
-.contentpane {
+// .contentpane {
+//   display: grid;
+//   grid-template-columns: repeat(4, [col] 1fr);
+//   grid-template-rows: repeat(4, [row] auto);
+// }
+.contentpaneopen {
   display: grid;
   grid-template-columns: repeat(4, [col] 1fr);
-  grid-template-rows: repeat(4, [row] auto);
-}
-.contentpaneopen {
-  grid-column: col / span 4;
-  grid-row: row / span 4;
+  grid-template-rows: repeat(4, [row] minmax(30rem, auto));
 }
 .green {
   color: $green;
-  a {
-    padding: .25em .75em;
-    border: 1px solid $green;
-  }
-  a:active {
-    color: $green;
-  }
-  a:visited {
-    color: $green;
-  }
-  a:hover {
-    color: $orange;
-    border: 1px solid $orange;
-  }
-}
-.white {
-  color: $white;
-  a {
-    padding: .25em .75em;
-    border: 1px solid $white;
-  }
-  a:active {
-    color: $white;
-  }
-  a:visited {
-    color: $white;
-  }
-  a:hover {
-    color: $orange;
-  }
 }
 .link {
   text-transform: uppercase;
@@ -111,12 +98,21 @@ $white: #fff;
 .intro-container {
   grid-column: col / span 4;
   grid-row: row;
-  background-color: #000;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  background: url('/app/site/media/images/pexels-photo-355988.jpg');
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%), url('/app/site/media/images/pexels-photo-355988.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: $black;
   color: $white;
 }
 .intro {
+  grid-column: 1 / span 2;
   width: 40%;
-  padding: 30px;
+  align-self: center;
+  padding: 2.5em;
   .tagline {
     color: $white;
   }
@@ -128,7 +124,15 @@ $white: #fff;
   grid-row: row 2;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-rows: repeat(2, minmax(23rem, auto));
+  background-color: $med-blue;
+  color: $white;
+  h2 {
+    color: $white;
+  }
+  h3 {
+    @extend h2;
+  }
 }
 h3 {
   font-family: 'montserratultra_light', 'Montserrat', Helvetica Neue, Helvetica, sans-serif;
@@ -143,12 +147,14 @@ h3 {
   .oer {
     width: 50%;
     padding: 2.5em;
+    align-self: center;
   }
   .module-left {
     width: 50%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
+    padding: 2.5em;
     .big {
       grid-column: span 3;
       .billboard-image {
@@ -174,12 +180,12 @@ h3 {
       }
     }
     .billboard-image::after {
-      @extend %image-gradient;
+      @include image-gradient;
     }
     .billboard {
       position: relative;
       .billboard-tag {
-        @extend %showcase-tag;
+        @include showcase-tag($green, $white);
       }
       .billboard-header {
         position: absolute;
@@ -200,13 +206,12 @@ h3 {
       }
     }
     .resource-img::after {
-      @extend %image-gradient;
+      @include image-gradient;
     }
     .resource {
       position: relative;
       .resource-tag {
-        @extend %showcase-tag;
-        background-color: $dark-blue;
+        @include showcase-tag($dark-blue, $white);
       }
       .resource-title {
         position: absolute;
@@ -229,10 +234,10 @@ h3 {
       }
     }
     .partner-img::after {
-      @extend %image-gradient;
+      @include image-gradient;
     }
     .partner-tag {
-      @extend %showcase-tag;
+      @include showcase-tag($green, $white);
     }
     .partner-title {
       position: absolute;
@@ -256,10 +261,10 @@ h3 {
         }
       }
       .group-img::after {
-        @extend %image-gradient;
+        @include image-gradient;
       }
       .group-tag {
-        @extend %showcase-tag;
+        @include showcase-tag($green, $white);
       }
       .group-description {
         position: absolute;
@@ -283,6 +288,7 @@ h3 {
     width: 50%;
     padding: 2.5em;
     .link {
+      @include buttons($white);
       padding-top: 2em;
     }
   }
@@ -303,7 +309,7 @@ h3 {
       height: 50px;
       align-self: center;
       margin: 0;
-      color: $med-gray;
+      color: $light-gray;
     }
   }
 }
@@ -320,7 +326,7 @@ h3 {
   display: flex;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 300px;
+  grid-template-rows: 23rem;
   .network-logos {
     padding: 2.5em;
     display: grid;
@@ -343,6 +349,7 @@ h3 {
     padding: 2.5em;
   }
   .link {
+    @include buttons($green);
     padding-top: 2em;
   }
 }
@@ -362,6 +369,7 @@ h3 {
       list-style: none;
     }
     .button {
+      @include buttons($green);
       text-align: center;
       h6 {
         position: relative;
@@ -401,12 +409,12 @@ h3 {
       }
     }
     .billboard-image::after {
-      @extend %image-gradient;
+      @include image-gradient;
     }
     .billboard {
       position: relative;
       .billboard-tag {
-        @extend %showcase-tag;
+        @include showcase-tag($green, $white);
       }
       .billboard-header {
         position: absolute;
@@ -427,12 +435,12 @@ h3 {
       }
     }
     .resource-img::after {
-      @extend %image-gradient;
+      @include image-gradient;
     }
     .resource {
       position: relative;
       .resource-tag {
-        @extend %showcase-tag;
+        @include showcase-tag($dark-blue, $white);
         background-color: $dark-blue;
       }
       .resource-title {
@@ -456,10 +464,10 @@ h3 {
       }
     }
     .partner-img::after {
-      @extend %image-gradient;
+      @include image-gradient;
     }
     .partner-tag {
-      @extend %showcase-tag;
+      @include showcase-tag($green, $white);
     }
     .partner-title {
       position: absolute;
@@ -483,10 +491,10 @@ h3 {
         }
       }
       .group-img::after {
-        @extend %image-gradient;
+        @include image-gradient;
       }
       .group-tag {
-        @extend %showcase-tag;
+        @include showcase-tag($green, $white);
       }
       .group-description {
         position: absolute;
@@ -535,24 +543,35 @@ h3 {
       margin-left: 0;
       margin-bottom: 2.5em;
     }
+    .link {
+      @include buttons($green);
+    }
   }
 }
 
 @media only screen and (min-width: 320px) and (max-width: 900px) {
+  .intro-container {
+    .intro {
+      grid-column: 1 / span 4;
+    }
+  }
   .resources {
     flex-wrap: wrap;
-    grid-template-rows: repeat(2, 1fr);
-    .big {
+    grid-template-rows: 20rem auto;
+    .module-left {
       width: 100%;
-      height: 250px;
       grid-column: 1 / span 4;
-      grid-row: 1;
+      grid-row: 2;
+      grid-template-rows: repeat(3, 17rem);
+      .regular {
+        grid-column: span 3;
+      }
     }
     .oer {
       width: 100%;
       order: -1;
       grid-column: 1 / span 4;
-      grid-row: 2;
+      grid-row: 1;
     }
   }
   .software {
@@ -592,10 +611,12 @@ h3 {
       grid-column: 1 / span 4;
       grid-row: 1;
     }
-    .module-right {
+    .right {
       width: 100%;
       grid-column: 1 / span 4;
       grid-row: 2;
+    }
+    .module-right {
       grid-template-rows: repeat(4, 150px);
       .big {
         grid-column: span 4;
@@ -611,7 +632,7 @@ h3 {
   }
   .three {
     flex-wrap: wrap;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
     .service {
       width: 100%;
       grid-column: 1 / span 4;
@@ -619,6 +640,14 @@ h3 {
   }
 }
 @media only screen and (min-width: 901px) and (max-width: 1200px) {
+  .resources {
+    .module-left {
+      grid-template-rows: repeat(3, 15rem);
+      .regular {
+        grid-column: span 3;
+      }
+    }
+  }
   .community {
     .module-right {
       grid-template-rows: repeat(4, 200px);
@@ -642,6 +671,11 @@ h3 {
 }
 //Reset widths if css grid is supported
 @supports (display:grid) {
+  .intro-container {
+    .intro {
+      width: auto;
+    }
+  }
   .resources {
     .oer {
       width: auto;
