--- a/templates/bmc/html/com_groups/groups.css
+++ b/templates/bmc/html/com_groups/groups.css
@@ -6,12 +6,18 @@
 }
 */
 @import url("/core/components/com_groups/site/assets/css/groups.css");
+#page_menu li {
+  border-bottom-color: #494a5a;
+}
+#page_menu li a:hover {
+  color: #000;
+}
 #page_menu li a,
 #page_menu li span {
-  color: #676767;
+  color: #d2d2d2;
 }
 #page_sidebar {
-  background: #f5f5f5;
+  background: #222b37;
 }
 #page_header h2 {
   float: none;
@@ -23,4 +29,28 @@
 }
 .group-page.page-overview h3 {
   font-size: 1.1rem;
+}
+.groups-container .group-contents {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.groups-container .group-alias,
+.group-meta span {
+  color: #1c1b20;
+}
+.groups-container .user-actions a {
+  line-height: 1em;
+}
+.groups-container .group-identity > span:after {
+  font-size: 60px;
+}
+#page_menu li ul:after,
+#page_menu li ul li .page:before {
+  background: #494a5a;
+}
+#page_menu li.active > a {
+  background: #fff;
+  color: #000;
+}
+#page_menu li.active:after {
+  display: none;
 }
