--- a/templates/bmc/html/com_members/members.css
+++ b/templates/bmc/html/com_members/members.css
@@ -8,8 +8,21 @@
 @import url("/core/components/com_members/site/assets/css/members.css");
 #page_menu li a,
 #page_menu li span {
-  color: #676767;
+  color: #d2d2d2;
+}
+#page_menu li.active > a {
+  color: #000;
+  background: #fff;
 }
 #page_sidebar {
-  background: #f5f5f5;
+  background: #222b37;
+}
+#page_menu li.active:after {
+  display: none;
+}
+#page_menu li a:hover {
+  color: #fff;
+}
+#page_menu li {
+  border-bottom-color: #494a5a;
 }
