--- a/templates/bmc/html/com_projects/projects.css
+++ b/templates/bmc/html/com_projects/projects.css
@@ -11,11 +11,19 @@
 }
 #project-innerwrap,
 .main-menu {
-  background: #f5f5f5;
+  background: #222b37;
 }
 .main-menu li a,
 .main-menu li span {
-  color: #676767;
+  color: #d2d2d2;
+}
+.main-menu li a:hover,
+.main-menu li a:hover span {
+  color: #fff;
+}
+.main-menu li.active a,
+.main-menu li.active span {
+  color: #222b37;
 }
 .page-com_projects .com_projects .ptitle {
   position: relative;
