--- a/templates/bmc/html/com_projects/standard.less
+++ b/templates/bmc/html/com_projects/standard.less
@@ -43,7 +43,7 @@
 .main-menu ul.projecttools li {
 	padding: 0;
 	margin: 0;
-	border-bottom: 1px solid #e8e8e8;
+	border-bottom: 1px solid @colorSidebarLine;
 	position: relative;
 }
 .main-menu ul.projecttools li a:before {
@@ -53,7 +53,7 @@
 }
 .main-menu ul.projecttools li a:hover:before,
 .main-menu ul.projecttools li a:hover {
-	color: #666;
+	color: @colorSidebarTextHover;
 }
 .main-menu ul.projecttools li a,
 .main-menu ul.projecttools li.assets>span {
@@ -88,7 +88,7 @@
 }
 .main-menu ul.projecttools li>a:hover,
 .main-menu ul.projecttools li>span:hover {
-	background: #fff;
+	//background: #fff;
 }
 .main-menu ul.projecttools li.pt_title,
 .main-menu ul.projecttools li.pt_title:hover {
