--- a/templates/bmc/less/_general/_typography.less
+++ b/templates/bmc/less/_general/_typography.less
@@ -12,6 +12,13 @@ h1, h2, h3, h4, h5, h6,
 	color: @colorHeadings;
 }
 
+.main.section {
+
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 1.5rem;
+	}
+}
+
 h1 {
 	font-family: @fontGeometric;
 	letter-spacing: -0.05em;
