--- a/templates/bmc/less/_layout/common/_buttons.less
+++ b/templates/bmc/less/_layout/common/_buttons.less
@@ -15,7 +15,8 @@
 	display: inline-block;
 	background: @colorLink;
 	color: #fff;
-	padding: 0.4rem 1rem;
+	//padding: 0.4rem 1rem;
+	padding: 0.7em 0.91em;
 	border: none;
 	outline: none;
 	.rounded(2px);
