--- a/templates/bmc/less/_layout/common/_generic_hub_elements.less
+++ b/templates/bmc/less/_layout/common/_generic_hub_elements.less
@@ -891,6 +891,10 @@ section.section .aside {
 
 	@media (min-width: @sizeL) {
 		width: 350px;
+
+		&:before {
+			left: 350px + @padContain;
+		}
 	}
 }
 
