--- a/templates/bmc/less/_vars/_colors.less
+++ b/templates/bmc/less/_vars/_colors.less
@@ -41,4 +41,8 @@
 @colorLinkOnDark: @colorTheme;
 
 @colorLightBorder:		#f0f0f0;
-@colorSidebarBg: #f5f5f5;
+@colorSidebarBg: #222b37;
+@colorSidebarText: #d2d2d2;
+@colorSidebarTextActive: #000;
+@colorSidebarTextHover: #fff;
+@colorSidebarLine: #494a5a;
